<resources>
    <string name="app_name">TemperaturaApp</string>
    <string name="action_listado">Listado de registros</string>
    <string name="modificar_registro">Modificar Registro</string>
    <string name="borrar_registro">Borrar Registro</string>

    <string name="direccion">Nombre del Paciente</string>
    <string name="medida">Temperatura Corporal</string>
    <string name="tipo_servicio">Escala de Temperatura</string>
    <string name="unidad_agua">Cº</string>
    <string name="unidad_luz">Fº</string>


    <string name="bt_guardar">Guardar</string>
    <string name="bt_cancelar">Cancelar</string>

    <string name="bt_eliminar">Eliminar registro</string>
    <string name="bt_actualizar">Actualizar registro</string>

</resources>
