<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/idTvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/amarante"
        android:text="@string/tipo_servicio"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Spinner
        android:id="@+id/idSpinnerTipoServicio"
        android:layout_width="61dp"
        android:layout_height="29dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amarante"
        android:text="@string/medida"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="233dp"
        android:fontFamily="@font/amarante"
        android:text="@string/direccion"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTvTitulo" />

    <TextView
        android:id="@+id/idTvUnidad"
        android:layout_width="74dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/amarante"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/idBtGuardar"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="36dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/amarante"
        android:text="@string/bt_guardar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/idBtCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/idBtCancelar"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="68dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/amarante"
        android:text="@string/bt_cancelar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idBtGuardar"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="290dp"
        android:layout_height="56dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="Escriba El Nombre Del Paciente"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="239dp"
        android:layout_height="50dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdMedida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="Digite la temperatura"
            android:maxLength="4"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
